; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_integration.c_workshop_file_closed_lineno.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_integration.c_workshop_file_closed_lineno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPATHLEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"deletedFile %s %d\0A\00", align 1
@sd = common dso_local global i32 0, align 4
@dummy = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @workshop_file_closed_lineno(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @MAXPATHLEN, align 4
  %8 = mul nsw i32 2, %7
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = trunc i64 %9 to i32
  %13 = call i32 @NOCATGETS(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @vim_snprintf(i8* %11, i32 %12, i32 %13, i8* %14, i32 %15)
  %17 = load i32, i32* @sd, align 4
  %18 = call i32 @strlen(i8* %11)
  %19 = call i32 @write(i32 %17, i8* %11, i32 %18)
  store i32 %19, i32* @dummy, align 4
  %20 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %20)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @vim_snprintf(i8*, i32, i32, i8*, i32) #2

declare dso_local i32 @NOCATGETS(i8*) #2

declare dso_local i32 @write(i32, i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
